--- a/app/views/pages/_nav.html.erb
+++ b/app/views/pages/_nav.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-  <%= link_to 'Eventbrite', pages_home_path, class:"navbar-brand" %>
+  <%= link_to 'Eventbrite', events_path, class:"navbar-brand" %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,14 +13,18 @@
 
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-
+  <% if !log_in?%>
      <li><%= link_to "Sign Up", signup_path, class: "nav-link"%></li>
 
     <li><%= link_to "Sign In", login_path, class: "nav-link"%></li>
-     
+     <%else%>
     <li><%= link_to "Sign Out", logout_path, method: :delete, class: "nav-link"%></li>
 
-   
+   <li><%= link_to "Create an event", new_event_path, class: "nav-link" if log_in?%></li>
+   <li><%= link_to current_user.username, pages_home_path, class: "nav-link" if log_in?%></li>
+   <li><%= link_to current_user.created_events.count, pages_home_path, class: "nav-link" if log_in?%></li>
+    <li><%= link_to "Show my events", showpage_path, class: "nav-link"%> </li>
+     <%end%>
     </ul>
     
   </div>
