add alert patial

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,9 @@
 <h1>My index page</h1>
-<% @events.each do |events|%>
-<h3><%=link_to events.description, show_path%></h3>
-  <strong>Date: <%= events.date%></strong><br>
+<% if log_in?%>
+<% @events.each do |event|%>
+<h3><%=link_to event.description, event%></h3>
+  <strong>Date: <%= event.date%></strong><br> 
+   
+<%end%>
+
 <%end%>
