--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,15 +1,8 @@
-<%= @event.creator.username.capitalize%></h2>
+<strong><%= @event.description %></strong>
+<span>:Event Date
+<%= @event.date %></span>
+<br>
 
-<span><%= @event.description %>: by <%= @event.creator.username %></span>
-<span><%= @event.date %></span>
-
-<%= event_button(@event, current_user) %>
-
-<br/>
-
-
-<h6>Who's Coming?</h6>
-<ul>
-<%= show_events_loop %> 
-</ul>
-
+<%= render '/partials/event_attend'%>
+<br>
+<%= render '/partials/event_attendee' %>
