separate events according to future/past

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,14 @@
-<h3>List of created events</h3>
+<%= render '/partials/home' if !log_in?%>
 
- <%= render '/partials/created_events' %>
+<% if log_in?%>
+<h3>List of upcoming events</h3>
+
+ <%= render '/partials/future_event' %>
+ <br>
+ <br>
+ <br>
+ <h3>List of past events</h3>
+
+  <%= render '/partials/past_events' %>
+
+<%end%>
