--- a/app/views/pages/_nav.html.erb
+++ b/app/views/pages/_nav.html.erb
@@ -4,12 +4,6 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    
-   
 
      <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -23,7 +17,8 @@
    <li><%= link_to "Create an event", new_event_path, class: "nav-link" if log_in?%></li>
    <li><%= link_to current_user.username, root_path, class: "nav-link" if log_in?%></li>
    <li><%= link_to current_user.created_events.count, root_path, class: "nav-link" if log_in?%></li>
-    <li><%= link_to "Show my events", showpage_path, class: "nav-link"%> </li>
+    <li><%= link_to "Events I'm attending", showpage_path, class: "nav-link"%> </li>
+     
      <%end%>
     </ul>
     
