--- a/app/views/partials/_future_event.html.erb
+++ b/app/views/partials/_future_event.html.erb
@@ -1,6 +1,4 @@
-<% if log_in?%>
-<% @events.each do |event|%>
+<% @upcoming_events.each do |event|%>
 <h3><%=link_to event.description, event%></h3>
   <strong>Date: <%= event.date%></strong><br> 
   <%end%>
-<%end%>
