--- a/app/views/partials/_past_events.html.erb
+++ b/app/views/partials/_past_events.html.erb
@@ -1,5 +1,5 @@
 <% if log_in?%>
-<% @events.each do |event|%>
+<% @past_events.each do |event|%>
 <h3><%=link_to event.description, event%></h3>
   <strong>Date: <%= event.date%></strong><br> 
   <%end%>
