--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,4 @@
-<h1>All my events</h1>
-<h2>List of all my events</h2>
-  <% @my_events.each do |event| %>
-  <h3><%=link_to event.description, event%></h3>
-  <strong>Date: <%= event.date%></strong><br>
- <%end%>
+<h1>Events <%= current_user.username.capitalize%> is attending</h1>
+<%= render '/partials/upcoming_events'%>
 
  
