--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,1 @@
-<h1>Welcome to my private events page</h1>
-<p>create and account or sign in using the links below to start creating your events or view other members events</p>
-
-<p>
-<strong> <%= link_to "Sign Up", signup_path%> </strong> |
-<strong> <%= link_to "Sign In", login_path%> </strong>
-</p>
+<%= render '/partials/home' %>
