--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Events <%= current_user.username.capitalize%> is attending</h1>
 <%= render '/partials/upcoming_events'%>
-
+<br>
+<%= render '/partials/past_events'%>
  
