correct typo on the pages/home

--- a/app/views/partials/_home.html.erb
+++ b/app/views/partials/_home.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome to my private events page</h1>
-<p>Create and account or sign in using the links below to start creating your events or view other members events</p>
+<p>Create an account or sign in using the links below to start creating your events or view other members events</p>
 
 <p>
 <strong> <%= link_to "Sign Up", signup_path%> </strong> |
