add a placeholder text to login, sign up and event forms

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,10 @@
 <h1>Create an account</h1>
 <%= form_with model: @user do |form| %>
-  <%= form.text_field :username %>
-  <%= form.submit value = "Sign Up" %>
+
+<div class="form-group">
+  <%= form.text_field :username, placeholder: "Choose a username" %>
+  </div>
+
+  <%= form.submit value = "Sign Up", class: "btn btn-primary"%>
 <% end %>
 
