--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,8 +1,15 @@
 <h1>Create an Event</h1>
 <h4>describe your events here</h4>
 <%= form_with model: @event do |form| %>
-  <%= form.text_area :description %>
+
+<div class="form-group">
+  <%= form.text_area :description, placeholder: "Describe your event here...", class: "form-control col-3"%>
+</div>
+
+  <div class="form-group">
   <%= form.date_field :date %>
-  <%= form.submit value = "create event" %>
+  </div>
+
+  <%= form.submit value = "create event", class: "btn btn-primary"%>
 <% end %>
 
