--- a/app/views/pages/_nav.html.erb
+++ b/app/views/pages/_nav.html.erb
@@ -18,7 +18,7 @@
    <li><%= link_to current_user.username, root_path, class: "nav-link" if log_in?%></li>
    <li><%= link_to current_user.created_events.count, root_path, class: "nav-link" if log_in?%></li>
     <li><%= link_to "Events I'm attending", showpage_path, class: "nav-link"%> </li>
-     
+    <li><%= link_to "Events", root_path, class: "nav-link"%> </li>
      <%end%>
     </ul>
     
