--- a/app/views/pages/_nav.html.erb
+++ b/app/views/pages/_nav.html.erb
@@ -15,10 +15,12 @@
     <li><%= link_to "Sign Out", logout_path, method: :delete, class: "nav-link"%></li>
 
    <li><%= link_to "Create an event", new_event_path, class: "nav-link" if log_in?%></li>
-   <li><%= link_to current_user.username, root_path, class: "nav-link" if log_in?%></li>
+   <li><%= link_to current_user.username, showpage_path, class: "nav-link" if log_in?%></li>
    <li><%= link_to current_user.created_events.count, root_path, class: "nav-link" if log_in?%></li>
     <li><%= link_to "Events I'm attending", showpage_path, class: "nav-link"%> </li>
-    <li><%= link_to "Events", root_path, class: "nav-link"%> </li>
+    <li><%= link_to "All Events", root_path, class: "nav-link"%> </li>
+    <li><%= link_to "User Events", showpage_path, class: "nav-link"%> </li>
+     
      <%end%>
     </ul>
     
