add notice to event and user controllers

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
 <%= render '/partials/upcoming_events'%>
 <br>
 
-<h3>Events <%= current_user.username.capitalize%> has attending</h3>
+<h3>Events <%= current_user.username.capitalize%> has attended</h3>
 
 <%= render '/partials/past_attended_event'%>
  
